# GUI_COM_test

./: .cproject  .gitmodules  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  GUI_COM_test Attach to running.launch  GUI_COM_test Debug.launch  GUI_COM_test.ioc  build.ninja  cmake_install.cmake
Core/Inc/: main_cpp.h
Core/Src/: custom_protocol.cpp  custom_protocol.h  main.c  main_cpp.cpp  stm32f3xx_hal_msp.c
